--- a/src/index.css
+++ b/src/index.css
@@ -2,10 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
+html{
+  background: linear-gradient(0deg, #F6F2FF, #F6F2FF), #FBFAFF;
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, 'Helvetica',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
